updated pictures and accent clr

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,11 @@
     <!-- <link rel="stylesheet" href="../style.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300&family=Cinzel&family=Forum&family=Herr+Von+Muellerhoff&family=Montserrat:wght@100&family=Playfair+Display&family=Tajawal:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=EB+Garamond&family=Nothing+You+Could+Do&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d9d525f619.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
